initial site files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Home Work</title>
 </head>
 <body>
-hi
+	<h1>Nao Kosaka</h1>
+	
+	<p>About</p>
+	<p>Portfolio</p>
+	<p>Contact</p>
+
+	<h2>About Me</h2>
+
+	<img src="https://scontent.ftpa1-1.fna.fbcdn.net/v/t1.0-9/13754543_915492321893947_2022092075733060720_n.jpg?oh=72e61bc3829ff4ec7b0d26f788f6a46b&oe=5876A3C9">
+	
+	<p>My name is Nao Kosaka and I'm from Tokyo, Japan. I love to watch Disney movies since when I was kid but especially The little Mermaid is my favorite! I also love to eat. My favorite food is ramen(soup noodles). nmmmm..! I wanna eat!!!! If anybody know about nice ramen shop let me know!! </p>
+
+	<h3>Connect with Me</h3>
+
+
+
 </body>
 </html>
