initial site files

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+	<!--link CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>contact</title>
 </head>
-<body>
-hi
-</body>
+
+	<body>
+		<!--header-->
+		<header id="header">
+			<!--Name part -->
+			<div id="name">
+				<h1>Nao Kosaka</h1>
+			</div>
+				<!--navigation -->
+				<nav class="navigation">
+					<a href="index.html">
+						About 
+					</a> |
+						
+					<a href="portfolio.html">
+						Portfolio
+					</a> |
+					<a href="contact.html">
+						Contact
+					</a>
+				</nav>
+		</header>
+
+		<!-- Main page -->
+		<div class="contents">
+			<!--"right side" -->
+			<div class="mainpage">
+				<h2>Contact</h2>
+
+				<form action="demo_form.asp" method="get" autocomplete="on">
+						Name<input type="text" name="name">
+					<br>
+						E-mail<input type="email" name="email">
+					<br>
+						Message<input type="text" name="message">
+					<br>
+					<input type="submit">
+				</form>
+			</div>
+
+
+			<aside class="sidebar">
+				<h3>Connect with Me</h3>
+
+					<a href="https://github.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679235_mark-github.svg" alt="Github"></a>
+					<a href="https://www.linkedin.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679267_LinkedIn.svg" alt="LinkedIn"></a>
+					<a href="http://stackoverflow.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679323_stackoverflow.svg" alt="Stackoverflow"></a>
+			</aside>
+		</div>	
+
+		<footer class="footer">
+			<p>&copy Copyright 2016 Nao Kosaka</p>
+		</footer>
+
+	</body>
 </html>
