--- a/index.html
+++ b/index.html
@@ -1,24 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Home Work</title>
+	<!--link CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>About me</title>
 </head>
-<body>
-	<h1>Nao Kosaka</h1>
-	
-	<p>About</p>
-	<p>Portfolio</p>
-	<p>Contact</p>
 
-	<h2>About Me</h2>
+	<body>
+		<!--header-->
+		<header id="header">
+			<!--Name part -->
+			<div id="name">
+				<h1>Nao Kosaka</h1>
+			</div>
+				<!--navigation -->
+				<nav class="navigation">
+					<a href="index.html">
+						About 
+					</a> |
+						
+					<a href="portfolio.html">
+						Portfolio
+					</a> |
+					<a href="contact.html">
+						Contact
+					</a>
+				</nav>
+		</header>
 
-	<img src="https://scontent.ftpa1-1.fna.fbcdn.net/v/t1.0-9/13754543_915492321893947_2022092075733060720_n.jpg?oh=72e61bc3829ff4ec7b0d26f788f6a46b&oe=5876A3C9">
-	
-	<p>My name is Nao Kosaka and I'm from Tokyo, Japan. I love to watch Disney movies since when I was kid but especially The little Mermaid is my favorite! I also love to eat. My favorite food is ramen(soup noodles). nmmmm..! I wanna eat!!!! If anybody know about nice ramen shop let me know!! </p>
 
-	<h3>Connect with Me</h3>
+		<!-- Main page -->
+		<div class="contents">
+			<!--"contents" -->
+			<div class="mainpage">
+				<h2>About Me</h2>
+
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/13754543_915492321893947_2022092075733060720_n.jpg" alt="My picture">
+					
+				<p>
+				My name is Nao Kosaka and I'm from Tokyo, Japan. I love to watch Disney movies since when I was kid and I recognise of songs of which movies and also what scenes of songs when I listen any disney movies immediately. In the disney movies especially my favorite one is The Little Mermaid.
+				</p>
+				<p>
+				I also love to eat. My favorite food is ramen(soup noodles). nmmmm..! I wanna eat!!!! If anybody know about nice ramen shop please let me know!! 
+				</p>
+				<p>1. The quick brown fox jumps over the lazy dog.
+				2. My Mum tries to be cool by saying that she likes all the same things that I do.3. If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you?4. A purple pig and a green donkey flew a kite in the middle of the night and ended up sunburnt.5. What was the person thinking  when they discovered cow’s milk was fine for human consumption… and why did they do it in the first place!?6. Last Friday in three week’s time I saw a spotted striped blue worm shake hands with a legless lizard.7. Wednesday is hump day, but has anyone asked the camel if he’s happy about it?8. If Purple People Eaters are real… where do they find purple people to eat?</p>
+			</div>
 
 
+			<aside class="sidebar">
+				<h3>Connect with Me</h3>
 
-</body>
+					<a href="https://github.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679235_mark-github.svg" alt="Github"></a>
+					<a href="https://www.linkedin.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679267_LinkedIn.svg" alt="LinkedIn"></a>
+					<a href="http://stackoverflow.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679323_stackoverflow.svg" alt="Stackoverflow"></a>
+			</aside>
+		</div>	
+
+		<footer class="footer">
+			<p>&copy Copyright 2016 Nao Kosaka</p>
+		</footer>
+
+	</body>
 </html>
