--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
 
-</body>
+<head>
+	<!--link CSS -->
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>portfolio</title>
+</head>
+
+	<body>
+		<!--header-->
+		<header id="header">
+			<!--Name part -->
+			<div id="name">
+				<h1>Nao Kosaka</h1>
+			</div>
+				<!--navigation -->
+				<nav class="navigation">
+					<a href="index.html">
+						About 
+					</a> |
+						
+					<a href="portfolio.html">
+						Portfolio
+					</a> |
+					<a href="contact.html">
+						Contact
+					</a>
+				</nav>
+		</header>
+
+		<!-- Main page -->
+		<div class="contents">
+			<!--"right side" -->
+			<div class="mainpage">
+				<h2>Portfolio</h2>
+
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/nature-q-c-640-480-6.jpg" alt="flowers">
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/nightlife-q-g-640-480-4.jpg" alt="Shibuya">
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/people-q-c-640-480-7.jpg" alt="prople">
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/city-q-g-640-480-6.jpg" alt="city">
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/cats-q-g-640-480-4.jpg" alt="cat">
+					
+
+
+			</div>
+
+
+			<aside class="sidebar">
+				<h3>Connect with Me</h3>
+
+					<a href="https://github.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679235_mark-github.svg" alt="Github"></a>
+					<a href="https://www.linkedin.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679267_LinkedIn.svg" alt="LinkedIn"></a>
+					<a href="http://stackoverflow.com/"><img class="logo" src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/1474679323_stackoverflow.svg" alt="Stackoverflow"></a>
+			</aside>
+		</div>
+
+		<footer class="footer">
+			<p>&copy Copyright 2016 Nao Kosaka</p>
+		</footer>
+
+	</body>
+
 </html>
