Adding all files

--- a/index.html
+++ b/index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<!--link CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<title>About me</title>
-</head>
+	<head>
+		<!--link CSS -->
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<title>About me</title>
+	</head>
 
 	<body>
 		<!--header-->
 		<header id="header">
-			<!--Name part -->
-			<div id="name">
-				<h1>Nao Kosaka</h1>
+			<div class="scale">
+					<!--Name part -->
+					<div id="name">
+						<h1>Nao Kosaka</h1>
+					</div>
+					<!--navigation -->
+					<nav class="navigation">
+						<a href="index.html">
+							About 
+						</a> |
+						<a href="portfolio.html">
+							Portfolio
+						</a> |
+						<a href="contact.html">
+							Contact
+						</a>
+					</nav>
 			</div>
-				<!--navigation -->
-				<nav class="navigation">
-					<a href="index.html">
-						About 
-					</a> |
-						
-					<a href="portfolio.html">
-						Portfolio
-					</a> |
-					<a href="contact.html">
-						Contact
-					</a>
-				</nav>
 		</header>
 
-
-		<!-- Main page -->
-		<div class="contents">
-			<!--"contents" -->
+		<!-- make 960px -->
+		<div class="main960px">
+			<!--Left side-->
 			<div class="mainpage">
 				<h2>About Me</h2>
 
-				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/13754543_915492321893947_2022092075733060720_n.jpg" alt="My picture">
+				<img src="/Users/Nao/Desktop/Basic-Portfolio/assets/images/13686657_921088594667653_4774259751424214922_n.jpg" alt="My picture">
 					
 				<p>
 				My name is Nao Kosaka and I'm from Tokyo, Japan. I love to watch Disney movies since when I was kid and I recognise of songs of which movies and also what scenes of songs when I listen any disney movies immediately. In the disney movies especially my favorite one is The Little Mermaid.
-				</p>
-				<p>
+				<br>
 				I also love to eat. My favorite food is ramen(soup noodles). nmmmm..! I wanna eat!!!! If anybody know about nice ramen shop please let me know!! 
-				</p>
-				<p>1. The quick brown fox jumps over the lazy dog.
-				2. My Mum tries to be cool by saying that she likes all the same things that I do.3. If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you?4. A purple pig and a green donkey flew a kite in the middle of the night and ended up sunburnt.5. What was the person thinking  when they discovered cow’s milk was fine for human consumption… and why did they do it in the first place!?6. Last Friday in three week’s time I saw a spotted striped blue worm shake hands with a legless lizard.7. Wednesday is hump day, but has anyone asked the camel if he’s happy about it?8. If Purple People Eaters are real… where do they find purple people to eat?</p>
+				<br>
+				1. The quick brown fox jumps over the lazy dog.2. My Mum tries to be cool by saying that she likes all the same things that I do.3. If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you?4. A purple pig and a green donkey flew a kite in the middle of the night and ended up sunburnt.5. What was the person thinking  when they discovered cow’s milk was fine for human consumption… and why did they do it in the first place!?6. Last Friday in three week’s time I saw a spotted striped blue worm shake hands with a legless lizard.7. Wednesday is hump day, but has anyone asked the camel if he’s happy about it?8. If Purple People Eaters are real… where do they find purple people to eat?</p>
 			</div>
 
-
+			<!--Right side -->
 			<aside class="sidebar">
 				<h3>Connect with Me</h3>
 
@@ -58,8 +57,9 @@
 			</aside>
 		</div>	
 
-		<footer class="footer">
-			<p>&copy Copyright 2016 Nao Kosaka</p>
+		<!--Footer-->
+		<footer>
+			&copy Copyright 2016 Nao Kosaka
 		</footer>
 
 	</body>
